[package]
name = "kvm_basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vmm-sys-util = "0.9.0"
kvm-bindings = { version = "0.5.0", features = ["fam-wrappers"] }
kvm-ioctls = "0.11.0"
libc = "0.2.126"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
savefile = "0.11.0"
serde_json = "1.0.64"
versionize = { version = ">=0.1.6" }
versionize_derive = { version = ">=0.1.3" }

[patch.crates-io]
kvm-bindings = { git = "https://github.com/firecracker-microvm/kvm-bindings", tag = "v0.5.0-1", features = ["fam-wrappers"] }